# python_hexagonal_tdd_example

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  main.py  pyproject.toml
.claude/skills/: python-dataclasses-modeling.md  python-dependency-injection.md  python-hexagonal-architecture.md  python-protocols-interfaces.md  python-ruff-mypy-quality.md  python-src-layout.md  python-tdd-pytest.md  python-uv-package-management.md
src/example_app/: __init__.py
src/example_app/adapters/: __init__.py
src/example_app/adapters/inbound/: __init__.py
src/example_app/adapters/outbound/: __init__.py  in_memory_repository.py
src/example_app/domain/: __init__.py
src/example_app/domain/models/: __init__.py  example_entity.py
src/example_app/domain/ports/: __init__.py  repository.py
src/example_app/domain/use_cases/: __init__.py  example_use_case.py
src/scripts/: __init__.py  clean.py
tests/: __init__.py  conftest.py
tests/adapters/inbound/: __init__.py
tests/adapters/outbound/: __init__.py  test_in_memory_repository.py
tests/domain/: __init__.py
tests/domain/ports/: __init__.py
tests/domain/use_cases/: __init__.py  test_example_use_case.py
